# OpenEnv

./: Dockerfile  inference.py  openenv.yaml  pyproject.toml  requirements.txt
my_env/: README.md  app.py  env.py  server.py  test_env.py
server/: app.py
