[project]
name = "train_control_env"
version = "0.1.0"
description = "Train RL Environment"
authors = [{name = "Siva Epuri"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["my_env*"]
