[project]
name = "train-control-env"
version = "0.1.0"
description = "Train RL Environment"
authors = [{ name = "Siva Epuri" }]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["my_env", "server"]
